Thu Feb 25 10:17:32 1999  Nick Clifton  <nickc@cygnus.com>

	* config/arm/arm.c (return_in_memory): Float fields in unions
	force a return in memory.
	(load_multiple_sequence): Add comment explaining why two LDR
	instructions can be better than an LDMIA instruction.

	* config/arm/arm.h (TARGET_SHORT_BY_BYTES): Add comment
	describing the real meaning of this option.
	(FIXED_REGISTERS): Default r10 to not-fixed.
	(CALL_USED_REGISTERS): Default r10 to not-call-used.
	(SUBTARGET_CONDITIONAL_REGISTER_USAGE): If not defined, define
	as empty. 
	(CONDITIONAL_REGISTER_USAGE): Fix r10 if TARGET_APCS_STACK is
	true.  Invoke SUBTARGET_CONDITIONAL_REGISTER_USAGE after
	performing other checks.

	* config/arm/arm.md (zero_extendhisi2): Undo previous change.
	(extendhisi2): Undo previous change.
	Also add comments describing why TARGET_SHORT_BY_BYTES can be
	ignored for armv4(t) architectures. 

	* config/arm/riscix.h (SUBTARGET_CONDITIONAL_REGISTER_USAGE):
	Define to fix r10.

	* config/arm/riscix1-1.h
	(SUBTARGET_CONDITIONAL_REGISTER_USAGE): Define to fix r10. 

Thu Feb 25 12:09:04 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* cse.c (dump_class): Make the function definition static to match
 	the prototype.

Wed Feb 24 17:47:28 1999  Jim Wilson  <wilson@cygnus.com>

	* dbxout.c (gstab.h): Use if CROSS_COMPILE.

	* dwarf2out.c (add_location_or_const_value_attribute):  Add big
	endian correction for parms passed in regs but living on the stack.

Wed Feb 24 14:03:54 1999  Jeffrey A Law  (law@cygnus.com)

	* calls.c (initialize_argument_information): New function extracted
	from expand_call.
	(expand_call): Use initialize_argument_information.  Remove variables
	which are no longer used due to cleanups.

	* calls.c (compute_argument_block_size): New function, extracted from
	expand_calls.
	(expand_calls): Use compute_argument_block_size.  Delete
	original_args_size, use unadjusted_args_size instead.

	* calls.c (precompute_arguments): New function, extracted from